[package]
name = "symbolfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
exe = "0.5.6"
hex = "0.4.3"
pkbuffer = "0.4.2"
reqwest = { version = "0.12.15", features = ["blocking"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
